- Edited readme file

--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+This project is work in progress. This work is based on the original obmenu program: 
+http://obmenu.sourceforge.net 
+
+More info about license on COPYING
+
 ==========
 OBMENU 1.0
 ==========
